apps/feedback/middleware-default-feedback-rate-limit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app: feedback-api
  name: feedback-rate-limit
  namespace: default
spec:
  rateLimit:
    average: 1
    burst: 10
