apps/feedback/deployment-default-feedback-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: feedback-api
  name: feedback-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: PGRST_DB_URI
          valueFrom:
            secretKeyRef:
              key: PGRST_DB_URI
              name: feedback-postgrest
        - name: PGRST_DB_SCHEMAS
          value: api
        - name: PGRST_DB_ANON_ROLE
          value: feedback_public
        - name: PGRST_DB_PRE_REQUEST
          value: feedback_auth.validate_oidc_claims
        - name: PGRST_JWT_AUD
          value: feedback-api
        - name: PGRST_JWT_ROLE_CLAIM_KEY
          value: '.resource_access."feedback-api".roles[?(@ == "feedback_admin")]'
        - name: PGRST_JWT_SECRET
          value: '@/etc/postgrest/jwks/keycloak-jwks.json'
        - name: PGRST_OPENAPI_SECURITY_ACTIVE
          value: "true"
        - name: PGRST_SERVER_PORT
          value: "3000"
        - name: PGRST_ADMIN_SERVER_PORT
          value: "3001"
        - name: PGRST_OPENAPI_SERVER_PROXY_URI
          value: https://feedback.brmartin.co.uk
        image: postgrest/postgrest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: admin
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        name: postgrest
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 3001
          name: admin
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: admin
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 25m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/postgrest/jwks
          name: keycloak-jwks
          readOnly: true
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - emptyDir: {}
        name: keycloak-jwks
