apps/feedback/service-default-feedback-admin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: feedback-admin
  name: feedback-admin
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: feedback-admin
