apps/feedback/service-default-feedback-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "3001"
    prometheus.io/scrape: "true"
  labels:
    app: feedback-api
  name: feedback-api
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: admin
    port: 3001
    targetPort: admin
  selector:
    app: feedback-api
