apps/feedback/ingress-default-feedback-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: feedback-api
  name: feedback-api
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: feedback.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: feedback-api
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - feedback.brmartin.co.uk
    secretName: wildcard-brmartin-tls
